--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -7,3 +7,4 @@
 @import "./partials/locations";
 @import "./partials/createNew";
 @import "./partials/product";
+@import "./partials/locationdetails";
