--- a/client/src/styles/partials/_product.scss
+++ b/client/src/styles/partials/_product.scss
@@ -12,6 +12,10 @@
       font-family: Avenir Bold;
     }
   }
+  &__backArrow {
+    width: 1rem;
+    height: 1.5rem;
+  }
   &__status {
     @include label;
     display: flex;
@@ -78,9 +82,10 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid $mercury;
+    width: 100%;
   }
   .product {
-    width: 100%;
+    // width: 100%;
     margin: 0 1.5rem;
     &__name {
       margin: 0;
@@ -89,14 +94,17 @@
         margin: 48px 0 40px 0;
       }
     }
+    &__backArrow {
+      margin-top: 0.5rem;
+    }
     &__status {
       margin-bottom: 0;
       margin-left: 24px;
       margin-top: 0.75rem;
     }
     .product-container2 {
-      //   width: 95%;
-      margin: 0 auto;
+      // width: 95%;
+      // margin: 0 auto;
       border-bottom: 1px solid $mercury;
     }
     &__itemDesc {
@@ -123,8 +131,7 @@
       margin-top: 40px;
     }
     &__btn-container {
-      width: 95%;
-      margin: 0 auto;
+      width: 100%;
       display: flex;
       justify-content: flex-end;
     }
@@ -134,10 +141,11 @@
 //desktop version
 @include desktop {
   .product {
-    max-width: 1080px;
+    width: 1080px;
     margin: 0 auto;
     &__itemInfo-wrapper {
-      width: 100%;
+      width: 528px;
+      padding-left: 0;
     }
     &__name img {
       width: 16px;
@@ -151,6 +159,10 @@
         font-size: 12px;
       }
     }
+    &__itemDesc-wrapper {
+      width: 512px;
+      margin-right: 40px;
+    }
     &__itemDesc-title {
       margin-top: 40px;
       margin-bottom: 24px;
@@ -158,9 +170,16 @@
     &__itemDesc {
       margin: 0;
     }
+    &__lastOrder {
+      width: 236px;
+      margin-right: 40px;
+    }
     &__lastOrder-title,
     &__location-title {
       margin: 0;
+    }
+    &__location {
+      margin-right: auto;
     }
     &__categories {
       margin-top: 56px;
@@ -177,9 +196,6 @@
         margin-top: 24px;
       }
     }
-    &__itemInfo-wrapper {
-      padding-left: 40px;
-    }
     &__btn-container {
       margin-right: 0;
     }
@@ -194,5 +210,6 @@
   .product-wrapper {
     margin-top: 40px;
     margin-bottom: 56px;
+    margin-right: 0;
   }
 }
