--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1200,6 +1200,15 @@ textarea::placeholder {
 }
 
 .createNew {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -1219,11 +1228,8 @@ textarea::placeholder {
 
 @media (min-width: 768px) {
   .createNew__form {
-    position: absolute;
     padding: 0 3rem;
     border-radius: 0.25rem;
-    top: 20%;
-    left: 30%;
     width: 36rem;
     height: 39rem;
     background-color: #ffffff;
@@ -1233,16 +1239,13 @@ textarea::placeholder {
 
 .createNew__form--warehouse {
   margin: 0 1rem;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 @media (min-width: 768px) {
   .createNew__form--warehouse {
-    position: absolute;
     padding: 0 3rem;
     border-radius: 0.25rem;
-    top: 20%;
-    left: 30%;
     width: 36rem;
     height: 45rem;
     background-color: #ffffff;
