--- a/client/src/styles/partials/_createNew.scss
+++ b/client/src/styles/partials/_createNew.scss
@@ -1,4 +1,7 @@
 .createNew {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -10,11 +13,12 @@
   &__form {
     margin: 0 1rem;
     @include tablet {
-      position: absolute;
+      // margin: auto;
+      // position: absolute;
       padding: 0 3rem;
       border-radius: 0.25rem;
-      top: 20%;
-      left: 30%;
+      // top: 20%;
+      // left: 30%;
       width: 36rem;
       height: 39rem;
       background-color: $white;
@@ -22,13 +26,13 @@
     }
     &--warehouse {
       margin: 0 1rem;
-      overflow-y: scroll; // not working
+      overflow-y: auto; // not working
       @include tablet {
-        position: absolute;
+        // position: absolute;
         padding: 0 3rem;
         border-radius: 0.25rem;
-        top: 20%;
-        left: 30%;
+        // top: 20%;
+        // left: 30%;
         width: 36rem;
         height: 45rem;
         background-color: $white;
